# excel-rs

./: Cargo.toml  README.md
.github/workflows/: cli.yml  release.yml
benchmarks/: test-py-excel-rs.py
cli-excel-rs/: Cargo.toml
cli-excel-rs/src/: main.rs
crates/excel-rs-csv/src/: lib.rs
crates/excel-rs-postgres/: Cargo.toml
crates/excel-rs-postgres/src/: lib.rs
crates/excel-rs-xlsx/: Cargo.toml
crates/excel-rs-xlsx/src/: format.rs  sheet.rs  typed_sheet.rs  workbook.rs
py-excel-rs/: Cargo.toml  pyproject.toml
py-excel-rs/src/: lib.rs  postgres.rs  utils.rs
