[package]
name = "excel-rs-xlsx"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = "../../README.md"
description = "xlsx processor for excel-rs"

[dependencies]
zip = { version = "4.6.1", default-features = false, features = [
    "deflate-flate2",
    "deflate-flate2-zlib-rs",
] }
anyhow = "1.0.86"
